<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">ECG_SDK_DEMO_AS!</string>
    <string name="app_name">ECG_SDK_DEMO_NOVIEW_AS</string>
    <string name="title_activity_gesture_function_define">GestureFunctionDefine</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="gesture_define_button12">Mode 12*1</string>
    <string name="gesture_define_button62">Mode 6*2</string>
    <string name="gesture_define_button621">Mode 6*2+1</string>
    <string name="gesture_button_add">button_define</string>
    <string name="gesture_button_done">button_done</string>
    <string name="gesture_button_discard">button_discard</string>
    
    <string name="filter_ALL">ALL</string>
    <string name="filter_AC">AC</string>
    <string name="filter_ENG">EMG</string>
    <string name="filter_BL">BL</string>
    <string name="filter_NO">NO</string>
    
    <string name="wave_display_MODE">Display Mode</string>
    <string name="display_SPEED">Speed</string>
    <string name="display_GAIN">Gain</string>

</resources>