<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <LinearLayout
        android:id="@+id/lineargl"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_above="@+id/linear2"
        android:layout_width="fill_parent"
        android:layout_height="47dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn01"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="37dip"
            android:text="@string/filter_ALL"
            />

        <Button
            android:id="@+id/btn02"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="37dip"
            android:text="@string/filter_AC"
            />
        <Button
                android:id="@+id/btn09"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="37dip"
                android:text="AC60Hz"
                />
        <Button
            android:id="@+id/btn03"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:text="@string/filter_ENG"
            />

        <Button
            android:id="@+id/btn04"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:text="@string/filter_BL"
            />
        <Button
            android:id="@+id/btn05"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:text="@string/filter_NO"
            />
        <Button
            android:id="@+id/btn06"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:text="@string/wave_display_MODE"
            />
         <Button
            android:id="@+id/btn07"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:text="@string/display_SPEED"
            />
          <Button
            android:id="@+id/btn08"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:text="@string/display_GAIN"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear2"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="47dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnStartConnect"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="37dip"
            android:text="连接设备"
            />

        <Button
            android:id="@+id/btnStopConnect"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="37dip"
            android:text="断开设备"
            />

        <Button
            android:id="@+id/btnStartRenderer"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="37dip"
            android:text="开始绘图"
            />

        <Button
            android:id="@+id/btnStopRenderer"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="37dip"
            android:text="停止绘图"
            />
    </LinearLayout>
    <serial.jni.ReviewWave
        android:id="@+id/NewWave"
        android:layout_above="@+id/lineargl"
        android:layout_below="@+id/titlebar"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" />
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="66dp"
        android:id="@+id/titlebar"
        >
       <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/image1"
            android:layout_alignParentLeft="true"
            android:src="@drawable/titlebar_1"
           />
       
       <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/image2"
            android:layout_alignParentRight="true"
            android:src="@drawable/titlebar_2"
            />
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="fill_parent"
           android:id="@+id/textHR"
           android:layout_alignLeft="@id/image1"
		   android:layout_alignRight="@id/image1"     
		   android:layout_alignTop="@id/image1"  
		   android:layout_alignBottom="@id/image1"  
           android:gravity="center_vertical|center_horizontal"
           android:text="HR"
           android:textColor="#00FF00"
           android:textSize="25sp"
           />
       <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/image3"
            android:layout_toRightOf="@+id/image1"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@+id/image2"
            android:src="@drawable/titlebar_3"
           />
        <TextView 
           android:layout_width="wrap_content"
           android:layout_height="fill_parent"
           android:id="@+id/textLeadOff"
           android:layout_alignLeft="@id/image3"
		   android:layout_alignRight="@id/image3"     
		   android:layout_alignTop="@id/image3"  
		   android:layout_alignBottom="@id/image3"  
           android:gravity="center_vertical|center_horizontal"
           android:text="LF"
           android:textColor="#0000FF"
           android:textSize="18sp"
           />
        <TextView
           android:layout_width="wrap_content"
           android:layout_height="fill_parent"
           android:id="@+id/textPaper"
           android:layout_alignLeft="@id/image2"
           android:layout_alignRight="@id/image2"
           android:layout_alignTop="@id/image2"
           android:layout_alignBottom="@id/image2"
           android:gravity="center_vertical|center_horizontal"
           android:text="PAPER"
           android:textColor="#fffffc42"
           android:textSize="18sp"
           />
    </RelativeLayout>
<!--
    <android.gesture.GestureOverlayView
        android:id="@+id/gestures"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_alignLeft="@id/GLWave"
		android:layout_alignRight="@id/GLWave"     
		android:layout_alignTop="@id/GLWave"  
		android:layout_alignBottom="@id/GLWave"  
        android:gestureStrokeType="multiple" >
    </android.gesture.GestureOverlayView>
-->
</RelativeLayout>